[package]
name = "express"
version = "0.2.0"
authors = ["Brian Stewart <brian.stewart@jamf.com>", "Tomasz Kurcz <tomasz.kurcz@jamf.com>"]
edition = "2018"
build = "build.rs"
autobins = false
publish = false

[[bin]]
name = "express"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
git2 = "0.13"
mustache = "0.9"
tempdir = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
text_io = "0.1.8"
walkdir = "2"
glob = "0.3.0"

[dev-dependencies]
cargo-release = "0.13.0"
