[package]
name = "rendr"
version = "0.3.3-alpha.0"
authors = ["Brian Stewart <brian.stewart@jamf.com>", "Tomasz Kurcz <tomasz.kurcz@jamf.com>"]
description = "A project scaffolding tool"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "templating", "project", "development"]
homepage = "https://jamf.github.io/rendr/"
repository = "https://github.com/jamf/rendr"
readme = "README.md"
license = "MIT"
edition = "2018"
build = "build.rs"
autobins = false

[[bin]]
name = "rendr"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
git2 = "0.13"
mustache = "0.9"
tempdir = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
text_io = "0.1.8"
walkdir = "2"
glob = "0.3.0"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.7.1"
pathdiff = "0.2.0"
notify = "4.0.15"

[dev-dependencies]
cargo-release = "0.13.0"
